@@ -1,5 +1,5 @@
 # -*- tcl -*-
-# $Id: tclOO.decls,v 1.15 2008/06/26 14:54:25 dkf Exp $
+# $Id: tclOO.decls,v 1.16 2009/07/19 11:56:44 dkf Exp $
 
 # public API
 library tclOO
@@ -108,6 +108,9 @@ declare 26 generic {
 declare 27 generic {
     void Tcl_ClassSetDestructor(Tcl_Interp *interp, Tcl_Class clazz,
 	    Tcl_Method method)
+}
+declare 28 generic {
+    Tcl_Obj *Tcl_GetObjectName(Tcl_Interp *interp, Tcl_Object object)
 }
 
 # private API, exposed to support advanced OO systems that plug in on top
