@@ -1,3 +1,8 @@
+2009-07-19  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOO.decls, generic/tclOO.c (Tcl_GetObjectName): Expose a
+	function for efficiently returning the current name of an object.
+
 2009-06-25  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/oo.test: [Bug 2811598]: Improve fragile tests.
